Made partial for dashboard team inner

--- a/app/views/static/contact.html.erb
+++ b/app/views/static/contact.html.erb
@@ -1,18 +1,14 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-    <div class="span8">
-			<h1>Contact Us</h1>
-			<p>Love RotoStarter?&nbsp;&nbsp;Hate it?&nbsp;&nbsp;Tell Us!&nbsp;&nbsp;We would love to hear from you!&nbsp;&nbsp;Or better yet, tell your friends about us.&nbsp;&nbsp;Social sharing is the highest form of flattery.</p>
+<div class="container large-8">
+	<h1>Contact Us</h1>
+	<p>Love RotoStarter?&nbsp;&nbsp;Hate it?&nbsp;&nbsp;Tell Us!&nbsp;&nbsp;We would love to hear from you!&nbsp;&nbsp;Or better yet, tell your friends about us.&nbsp;&nbsp;Social sharing is the highest form of flattery.</p>
 
-			<h3>Support</h3>
-			<p>For support or product feedback, please email us at <a href="mailto:support@rotostarter.com">support@rotostarter.com</a></p>
-			  	
-			<h3>Other Inquiries</h3>
-			<p>
-				To get in touch with our Business Development team or for all press inquiries, email us at <a href="mailto:info@rotostarter.com">info@rotostarter.com</a>.
-			</p>
-		</div>
-	</div>
+	<h3>Support</h3>
+	<p>For support or product feedback, please email us at <a href="mailto:support@rotostarter.com">support@rotostarter.com</a></p>
+	  	
+	<h3>Other Inquiries</h3>
+	<p>
+		To get in touch with our Business Development team or for all press inquiries, email us at <a href="mailto:info@rotostarter.com">info@rotostarter.com</a>.
+	</p>
 </div>
 
 
