--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,3 +4,134 @@
 */
 
 @import "foundation";
+
+// GLOBAL VARIABLES
+
+// Colors
+$txt-lightbrown: #5A4A42;
+$txt-green: green;
+$txt-red: red;
+$txt-lightblue: #00AEEF;
+$txt-blue: #00AEEF;
+$txt-brown: #5A4A42;
+
+$bg-darkbrown: #906e59;
+$bg-lightgray: #f7f7f8;
+$bg-lightblue: #e0f2fe;
+
+$break-small: 760px;
+
+/*  =======================  */
+/*  Container Styles  */
+/*  =======================  */
+
+.container {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+
+/*  =======================  */
+/*  List Styles  */
+/*  =======================  */
+
+.container ol, 
+.container ul,
+.container ul li ul,
+.container ul li ol,
+.container ol li ul, 
+.container ol li ol {
+	margin-top: 1em;
+	margin-left: 2em;
+	list-style: none;
+}
+
+.container li {
+	clear: both;
+}
+
+ol[type="a"] > li {
+	margin: 1em 0;
+	list-style: lower-alpha;
+}
+
+ol[type="i"] > li {
+	margin-top: 0.5em;
+	list-style: lower-roman;
+}
+
+li.disc {
+	list-style: disc;
+}
+
+/*  =======================  */
+/*  Mixin Styles  */
+/*  =======================  */
+
+
+.pad-right { padding-right: 1em; }
+.pad-left { padding-left: 1em; }
+.no-padding { padding: 0 !important; }
+
+.margin-top-05 { 
+	margin-top: 0.2em !important;
+
+	@media screen and (min-width: $break-small) {
+		margin-top: 0.6em !important;
+	}
+	
+}
+.margin-top-1 { margin-top: 1em !important; }
+.margin-top-2 { margin-top: 2em !important; }
+.margin-bottom-1 { margin-bottom: 1em !important; }
+.margin-bottom-2 { margin-bottom: 2em !important; }
+.margin-right-1 { margin-right: 1em !important; }
+.margin-right-2 { margin-right: 2em !important; }
+.margin-left-1 { margin-left: 1em !important; }
+.margin-left-2 { margin-left: 2em !important; }
+.no-margin { margin: 0 !important; }
+
+.clearfix { clear: both; }
+
+
+.activate-button {
+	width: 100px;
+
+	div.switch {
+		padding-left: 0.5em;
+		padding-right: 2.5em;
+		margin-top: 0.1em;
+		margin-bottom: 0;
+	}
+
+}
+
+
+.alert-box a {
+	color: yellow;
+
+	&:hover {
+		color: $txt-lightbrown;
+	}
+}
+
+.panel {
+	p {
+		margin: 0;		
+	}
+
+	li {
+		list-style: none;
+	}
+}
+
+h6.league-type-header {
+	margin-top: 0.2em !important;
+
+	@media screen and (min-width: $break-small) {
+		margin-top: 0.6em !important;
+	}		
+}
+
+
+
