--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,7 +3,7 @@
     <ul class="title-area">
       <!-- Title Area -->
       <li class="name">
-        <h1><a href="#"><img src="/images/RotoStarterLogoBlue200.png" style="height: 100%;" alt="Roto Starter Logo"></a></h1>
+        <h1><a href="/"><img src="/images/RotoStarterLogoBlue200.png" style="height: 80%;padding-top:10%" alt="Roto Starter Logo"></a></h1>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -18,7 +18,7 @@
 
           <ul class="dropdown">
             <li><label>Manage</label></li>
-            <li><a href="#">Baseball Dashboard</a></li>
+            <li><%= link_to "Baseball Dashboard", :controller => "teams", :action => "index" %></li>
             <li class="divider"></li>
             <li><label>Help</label></li>
             <li><%= link_to "How Does It Work?", :controller => "static", :action => "howitworks" %></li>
