--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,23 +1,25 @@
-<div class="row">
-  <div class="small-8 large-5 columns">  
-    <h3 class="HomeSignUp" >
-    <%= form_tag do %>
-      <br>
-      <b>RotoStarter Login</b><br><br>
-      <%= label_tag(:email, "Email:") %>
-      <%= text_field_tag(:email) %>
-      <%= label_tag(:pass, "Password:") %>
-      <%= password_field_tag(:pass) %>
-      <br>
-      <input name="commit" src="/images/RSLogIn.png" type="image" value="Login"/>
-      <br>
-      <div class="HomeTinyLinks">
-        <%= link_to 'Forgot Your Password?', :action => 'forgot_password' %>
+<div class="container large-8"> 
+
+    <div class="row">
+      <h3 class="container small-8 large-5" >RotoStarter Login</h3>
+
+      <div class="container small-8 large-5">
+        <%= form_tag do %>
+          <%= label_tag(:email, "Email:") %>
+          <%= text_field_tag(:email) %>
+          <%= label_tag(:pass, "Password:") %>
+          <%= password_field_tag(:pass) %>
+          <br>
+          <input name="commit" src="/images/RSLogIn.png" type="image" value="Login"/>
+          <br>
+          <br>
+          <h6 class="subheader">
+            <%= link_to 'Forgot Your Password?', :action => 'forgot_password' %>
+          </h6>
+          <% flash.each do |name, msg| %>
+            <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+          <% end %>
+        <% end %>
       </div>
-      <% flash.each do |name, msg| %>
-        <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-      <% end %>
-    <% end %>
-    </h3>
-  </div>
+    </div>
 </div>
