--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,25 +1,10 @@
 /*
- *= require global
  *= require foundation
 */
 
 @import "foundation";
+@import "global";
 
-// GLOBAL VARIABLES
-
-// Colors
-$txt-lightbrown: #5A4A42;
-$txt-green: green;
-$txt-red: red;
-$txt-lightblue: #00AEEF;
-$txt-blue: #00AEEF;
-$txt-brown: #5A4A42;
-
-$bg-darkbrown: #906e59;
-$bg-lightgray: #f7f7f8;
-$bg-lightblue: #e0f2fe;
-
-$break-small: 760px;
 
 /*  =======================  */
 /*  Container Styles  */
@@ -68,30 +53,33 @@ li.disc {
 /*  Mixin Styles  */
 /*  =======================  */
 
+.txt-lightbrown 	{ color: $txt-lightbrown !important; }
+.txt-green 				{ color: $txt-green !important; }
+.txt-red 					{ color: $txt-red !important; }
+.txt-lightblue 		{ color: $txt-lightblue !important; }
+.txt-blue 				{ color: $txt-blue !important; }
+.txt-brown 				{ color: $txt-brown !important; }
 
-.pad-right { padding-right: 1em; }
-.pad-left { padding-left: 1em; }
-.no-padding { padding: 0 !important; }
+.bg-lightgray 		{ background-color: $bg-lightgray !important; }
+.bg-lightblue 		{ background-color: $bg-lightblue !important; }
+.bg-darkbrown 		{ background-color: $bg-darkbrown !important; }
 
-.margin-top-05 { 
-	margin-top: 0.2em !important;
+.pad-right 				{ padding-right: 1em !important; }
+.pad-left 				{ padding-left: 1em !important; }
+.no-padding 			{ padding: 0 !important; }
 
-	@media screen and (min-width: $break-small) {
-		margin-top: 0.6em !important;
-	}
-	
-}
-.margin-top-1 { margin-top: 1em !important; }
-.margin-top-2 { margin-top: 2em !important; }
-.margin-bottom-1 { margin-bottom: 1em !important; }
-.margin-bottom-2 { margin-bottom: 2em !important; }
-.margin-right-1 { margin-right: 1em !important; }
-.margin-right-2 { margin-right: 2em !important; }
-.margin-left-1 { margin-left: 1em !important; }
-.margin-left-2 { margin-left: 2em !important; }
-.no-margin { margin: 0 !important; }
+.margin-top-05 		{ margin-top: 0.5em !important; }
+.margin-top-1 		{ margin-top: 1em !important; }
+.margin-top-2 		{ margin-top: 2em !important; }
+.margin-bottom-1 	{ margin-bottom: 1em !important; }
+.margin-bottom-2 	{ margin-bottom: 2em !important; }
+.margin-right-1 	{ margin-right: 1em !important; }
+.margin-right-2 	{ margin-right: 2em !important; }
+.margin-left-1 		{ margin-left: 1em !important; }
+.margin-left-2 		{ margin-left: 2em !important; }
+.no-margin 				{ margin: 0 !important; }
 
-.clearfix { clear: both; }
+.clearfix 				{ clear: both; }
 
 
 .activate-button {
@@ -106,7 +94,6 @@ li.disc {
 
 }
 
-
 .alert-box a {
 	color: yellow;
 
@@ -115,9 +102,25 @@ li.disc {
 	}
 }
 
+table {
+	border: 1px black solid;
+}
+
 .panel {
-	p {
+	overflow: hidden;
+	margin-bottom: 0;
+	border: 1px white solid;
+
+	p, h4 {
 		margin: 0;		
+	}
+
+	h6.league-type-header {
+		margin: 0;		
+
+		@media screen and (min-width: $small-screen) {
+			margin-top: 0.2em;
+		}
 	}
 
 	li {
@@ -125,13 +128,6 @@ li.disc {
 	}
 }
 
-h6.league-type-header {
-	margin-top: 0.2em !important;
-
-	@media screen and (min-width: $break-small) {
-		margin-top: 0.6em !important;
-	}		
+[class*="column"] + [class*="column"]:last-child {
+	float: left;
 }
-
-
-
