--- a/app/views/user/change_password.html.erb
+++ b/app/views/user/change_password.html.erb
@@ -1,26 +1,25 @@
 
-<h3 class="HomeSignUp" >
+<div class="container large-8"> 
 
-<%= form_tag do %>
-  <b>Change Password - <%=@user.email%></b><BR><BR>
-  <%= label_tag(:pass, "Original Password:") %>
-  <%= password_field_tag(:oldpass) %>	
-  <BR>	
-  <%= label_tag(:pass, "New Password:") %>
-  <%= password_field_tag(:pass) %>
-  <BR>
-  <%= label_tag(:repass, "Confirm Password:") %>
-  <%= password_field_tag(:repass) %>
-  <BR>
-  <%= submit_tag("Submit") %>
-  <BR>
-  	
-  <span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
-  <% flash.each do |name, msg| %>
-	        <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-	      <% end %>
-<% end %>
-
-</h3>
-
-
+    <div class="row">
+      <div class="container small-8 large-5">
+      <h3 class="no-margin">Change Password</h3>
+      <h6 class="subheader margin-bottom-2"><%=@user.email%></h6>
+      <%= form_tag do %>
+        <%= label_tag(:pass, "Original Password:") %>
+        <%= password_field_tag(:oldpass) %> 
+        <%= label_tag(:pass, "New Password:") %>
+        <%= password_field_tag(:pass) %>
+        <%= label_tag(:repass, "Confirm Password:") %>
+        <%= password_field_tag(:repass) %>
+        <BR>
+        <%= submit_tag("Submit", :class=>"button small") %>
+        <BR>
+          
+        <span class="flash_message"><%= @user.errors.full_messages.first if @user.errors.any? %></span>
+        <% flash.each do |name, msg| %>
+          <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+        <% end %>
+      <% end %>
+    </div>
+</div>
