--- a/app/views/user/forgot_password.html.erb
+++ b/app/views/user/forgot_password.html.erb
@@ -1,26 +1,27 @@
 
-<h3 class="HomeSignUp" style="text-align: left">
-<%if (@show)%>
-<%= form_tag do %>
-  <b>Forgot Password</b><BR>
-  <span class="DashActiveBrown">We will send you a email with a temporary password</span>
-  <BR><BR>
-  <%= label_tag(:email, "E-mail:") %>
-  <%= text_field_tag(:email) %>	
-  <%= submit_tag("Submit") %>	
- <BR>
-  <% flash.each do |name, msg| %>
-	        <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
-	      <% end %>
-<% end %>
-
-<%else%>
-Your password recovery email is on its way!
-<ul><li>An email containing your temporary password has been sent.</li>
-	<li>If you do not receive an email within 10 minutes, check your spam folder first.</li>
-</ul>
-<%end%>
-
-</h3>
 
 
+<div class="container large-8"> 
+  <div class="row">
+    <div class="container small-8 large-5">
+      <h3 class="no-margin">Forgot Password</h3>
+      <h6 class="subheader margin-bottom-2">To reset your password, enter your email address below.&nbsp;&nbsp;A new password will be sent to you by email.</h6>
+      <%if (@show)%>
+        <%= form_tag do %>
+          <%= label_tag(:email, "E-mail:") %>
+          <%= text_field_tag(:email) %> 
+          <%= submit_tag("Submit", :class=>"button small") %>
+          <BR>
+            
+          <% flash.each do |name, msg| %>
+            <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+          <% end %>
+        <% end %>  
+      <%else%>
+        <p>Your password recovery email is on its way!</p>
+        <p>An email containing your temporary password has been sent. If you do not receive an email within 10 minutes, check your spam folder.</p>
+      </ul>
+      <%end%>
+
+    </div>
+</div>
