Temporarily Added Sign Up to Log In page

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,9 +1,9 @@
 <div class="container large-8"> 
 
     <div class="row">
-      <h3 class="container small-8 large-5" >RotoStarter Login</h3>
 
-      <div class="container small-8 large-5">
+      <div class="left container small-8 large-5">
+        <h3>RotoStarter Login</h3>
         <%= form_tag do %>
           <%= label_tag(:email, "Email:") %>
           <%= text_field_tag(:email) %>
@@ -21,5 +21,29 @@
           <% end %>
         <% end %>
       </div>
+      <div class="right container small-8 large-5">
+        <h3>RotoStarter Signup</h3>
+        <%= form_tag '/user/signup' do %>
+          <div style="margin:0;padding:0;display:inline">
+            <input name="utf8" type="hidden" value="&#x2713;"/>
+            <input name="authenticity_token" type="hidden" value="j7+BQAJL4+O/vxqArSm4BmwFpvMhjGmR4vBRLrcxkc4="/>
+          </div>
+          <%= label_tag(:email, "Email:") %>
+          <%= text_field_tag(:email) %>
+          <%= label_tag(:pass, "Password:") %>
+          <%= password_field_tag(:pass) %>
+          <%= label_tag(:repass, "Confirm Password:") %>
+          <%= password_field_tag(:repass) %>
+          <br>
+          <input name="commit" src="/images/RSSignUp.png" type="image" value="Sign Up"/>
+          <br><br>
+          <% flash.each do |name, msg| %>
+            <%= content_tag :span, msg, :id => "flash_#{name}", :class=>"flash_message" %>
+          <% end %>
+          <div class="HomeTinyLinks">I agree to the <a href="/static/terms">Terms of Service</a> and <a href="/static/privacy">Privacy Policy</a>
+          </div><BR>
+        <% end %>
+      </div>
+
     </div>
 </div>
